--- a/estilo.css
+++ b/estilo.css
@@ -23,6 +23,10 @@ ul{
     
 }
 
+li{
+    font: white;
+}
+
 }
 
 @media only screen and (min-width: 600px){
@@ -65,7 +69,7 @@ ul{
 nav{
     
     height: 45px;
-    width: 100%;
+    width: 100% !important;
     align-items: center;
     text-align: center;
     background-color: black;
@@ -82,7 +86,7 @@ ul{
     top: 0;
     display: flex;  
     font-size: medium;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
     text-align: center;
     overflow: hidden;
     list-style-type: none;
