--- a/estilo.css
+++ b/estilo.css
@@ -3,78 +3,120 @@
     padding: 0;
 }
 
-@media only screen and (max-width: 600px){
 
-div.grillaindex{
-    grid-template-columns: 100%;
-    grid-template-rows: 200px 20px 200px 20px;
-}
+/*Movil*/
+@media (min-width:200px) and (max-width:576px){
 
-
-nav{
-    height: 200px;
+    nav{
+    height: 245px;
     width: 100%;
-    position: absolute; 
-    padding-bottom: 200px;
+    display: flex;  
+    flex-direction: column;
+    background-color: black;
+    bottom: 20px;
+    
+
+    
 }
 
 ul{
+    position: sticky;
+    display: flex;
+    font-size: medium;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
+    text-align: center;
+    overflow: hidden;
+    list-style-type: none;
     flex-direction: column;
     
 }
 
-li{
-    font: white;
+h1.primertitulo{
+    margin-left: 1%;
+    padding-bottom: 100px;
+    
 }
 
+p.primerparrafo{
+    margin-left: 1%;
+    margin-top: 1%;
+    padding-top: 50px;
+    font-size: large;
 }
 
-@media only screen and (min-width: 600px){
 
-    div.grillaindex{
+div.grillaindex{
         grid-template-columns: 100%;
-        grid-template-rows: 400px 20px 400px 20px;
+        grid-template-rows: 500px 35px 500px 35px !important;
+        align-items: flex-end;
+        padding-top: 50px;
     }
+
+    #imagen1 { 
+        width: 300px;
+        height: 450px;
+    }
+
+
+    #imagen2{
+        width: 300px;
+        height: 450px;
+    }
+
+}
+    
+
+/*Media*/
+@media (min-width:576px) and (max-width:768px){
+
 
     nav{
-        height: 200px;
         width: 100%;
+        align-items: center;
+        text-align: center;
+        background-color: black;
+        position: fixed;
+        top: 0;
+    }
+
+    h1.primertitulo{
+        margin-left: 1%;
+        padding-bottom: 20px;
     }
     
-    ul{
-        flex-direction: row ;
-        
-    }
-
-}
-
-@media only screen and (min-width: 992px){
-
     div.grillaindex{
-
-        display: grid;
-        
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 800px 20px 800px 20px;
+            grid-template-columns: 100%;
+            grid-template-rows: 600px 35px 600px 35px !important;
+            align-items: flex-end;
+            padding-top: 50px;
+        }
     
-        align-items: flex-end;
+        #imagen1 { 
+            width: 300px;
+            height: 450px;
+        }
     
+    
+        #imagen2{
+            width: 300px;
+            height: 450px;
+        }
     }
 
-}
-
+ 
 
 
 
 nav{
     
-    height: 45px;
-    width: 100% !important;
+    
+    width: 100%;
     align-items: center;
     text-align: center;
     background-color: black;
     position: fixed;
     top: 0;
+   
    
     
 }
@@ -116,15 +158,15 @@ li a:hover {
 /*Index*/
 h1.primertitulo{
     margin-left: 1%;
-    margin-top: 2%;
-    padding-top: 20px;
+    padding-top: 50px;
+    
 }
 
 
 p.primerparrafo{
     margin-left: 1%;
-    margin-top: 1%;
-    padding-top: 20px;
+    
+    
     font-size: large;
 }
 
@@ -190,5 +232,3 @@ footer{
 h3{
     color: white;
 }
-
-
